# hexes

./: .clangd.local.example  .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  update_clangd.sh
app/: main.cpp
examples/basic/: main.cpp
include/hexes/: logger.hpp  lua_hot_reloader.hpp  serialization.hpp  transform2d.hpp
include/hexes/fs/: hot_reloader.hpp
include/hexes/lua/: behavior.hpp  globals.hpp
scripts/: example.lua
src/: hot_reloader.cpp  logger.cpp  lua_hot_reloader.cpp  serialization.cpp
src/fs/: hot_reloader.cpp
src/lua/: behavior.cpp  globals.cpp
